Fixed: alignment

--- a/Components/Swap/Swap.module.css
+++ b/Components/Swap/Swap.module.css
@@ -103,6 +103,8 @@
     font-size: 20px;
     font-weight: 400;
     font-family: "Inter";
+    text-align: start;
+    margin-top: 20px;
   }
   
   .swapAmount {
@@ -160,7 +162,7 @@
     object-fit: contain;
     object-position: center;
     width: 30px;
-    margin-top: 25px;
+    /* margin-top: 10px; */
     height: 30px;
   }
   
@@ -197,5 +199,10 @@
     white-space: nowrap;
     border: 0;
   }
-  .balance{
-  }
+ .buyinput{
+  background-color: transparent;
+  color: white;
+ }
+ .buyinput::placeholder{
+  color: white;
+ }
